--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <div class ="msg-container hide">
-    <p id="msg">You are the WINNER!!! Ayein! </p> 
+    <p id="msg">You are the WINNER! </p> 
 
     <button id="newGame">New game!! </button>
     </div>
